Make alignment modifiers !important fixes (#748)

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -33,10 +33,10 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
   +clearfix
 
 .is-pulled-left
-  float: left
+  float: left !important
 
 .is-pulled-right
-  float: right
+  float: right !important
 
 // Overflow
 
@@ -51,13 +51,13 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 // Text
 
 .has-text-centered
-  text-align: center
+  text-align: center !important
 
 .has-text-left
-  text-align: left
+  text-align: left !important
 
 .has-text-right
-  text-align: right
+  text-align: right !important
 
 @each $name, $pair in $colors
   $color: nth($pair, 1)
